--- a/index.html
+++ b/index.html
@@ -1,82 +1,61 @@
-!DOCTYPE html
-html lang=en
-head
-  meta charset=UTF-8
-  meta name=viewport content=width=device-width, initial-scale=1.0
-  titleYour Business Name - Household Productstitle
-  link rel=stylesheet href=style.css
-head
-body
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Your Business Name | Household Products</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
 
-  !-- Header --
-  header
-    h1Welcome to Your Business Nameh1
-    pYour ultimate destination for high-quality household productsp
-    nav
-      a href=#aboutAbouta
-      a href=#productsProductsa
-      a href=#contactContacta
-    nav
-  header
+  <header>
+    <h1>Your Business Name</h1>
+    <p>High-quality household products for every home</p>
+  </header>
 
-  !-- About Section --
-  section id=about
-    h2About Ush2
-    pWe provide practical, innovative, and reliable household solutions to simplify your daily life. Our store focuses on a wide range of household essentials, including cleaning appliances, home maintenance tools, pest control products, and electric gadgets.p
-  section
+  <section>
+    <h2>About Us</h2>
+    <p>
+      We provide reliable, affordable, and innovative household products
+      designed to make your home cleaner, safer, and more comfortable.
+    </p>
+  </section>
 
-  !-- Vision & Mission --
-  section id=vision
-    h2Vision & Missionh2
-    h3Visionh3
-    pTo become the leading local provider of household products that improve quality of life and simplify daily chores.p
-    h3Missionh3
-    ul
-      liOffer high-quality household appliances and tools.li
-      liProvide a seamless shopping experience.li
-      liEducate customers on home cleaning and maintenance.li
-      liContinuously expand our product range.li
-      liSupport local communities.li
-    ul
-  section
+  <section>
+    <h2>Our Products</h2>
 
-  !-- Products Section --
-  section id=products
-    h2Our Productsh2
+    <div class="card">
+      <h3>Cleaning Appliances</h3>
+      <p>Vacuum cleaners, steam cleaners, electric mops.</p>
+    </div>
 
-    h3Cleaning Appliancesh3
-    pVacuum machines, carpet cleaners, electric mops, handheld dusters.p
+    <div class="card">
+      <h3>Household Tools</h3>
+      <p>Cleaning tools, organizers, ladders, utility items.</p>
+    </div>
 
-    h3Household Toolsh3
-    pMulti-purpose cleaning tools, organizers, ladders, utility gadgets.p
+    <div class="card">
+      <h3>Pest Control</h3>
+      <p>Bug sprays, electric zappers, traps, repellents.</p>
+    </div>
 
-    h3Pest Control Solutionsh3
-    pInsect sprays, bug zappers, natural repellents, preventive solutions.p
+    <div class="card">
+      <h3>Kitchen & Home Appliances</h3>
+      <p>Blenders, kettles, air purifiers, fans.</p>
+    </div>
 
-    h3Kitchen & Home Appliancesh3
-    pBlenders, electric kettles, air purifiers, heaters, fans.p
+  </section>
 
-    h3Home Maintenance & Electrical Toolsh3
-    pLED lamps, extension cords, smart plugs, basic repair tools.p
-  section
+  <section>
+    <h2>Contact Us</h2>
+    <p>Email: info@yourbusiness.com</p>
+    <p>Phone: 012 345 678</p>
+  </section>
 
-  !-- Customer Experience --
-  section id=experience
-    h2Customer Experienceh2
-    pEasy-to-navigate website, secure payment options, fast delivery, product education, and responsive support.p
-  section
+  <footer>
+    <p>© 2025 Your Business Name. All rights reserved.</p>
+  </footer>
 
-  !-- Contact Section --
-  section id=contact
-    h2Contact Ush2
-    pEmail info@yourbusiness.com  Phone 012 345 678p
-  section
-
-  !-- Footer --
-  footer
-    p&copy; 2025 Your Business Name. All rights reserved.p
-  footer
-
-  script src=script.jsscript
-body
-html
+  <script src="script.js"></script>
+</body>
+</html>
